force-app/main/default/objects/MessagingSession/fields/Agent_accepted_time__c.field-meta.xml
<CustomField>
    <fullName>Agent_accepted_time__c</fullName>
    <formula>IF(ISPICKVAL(AgentType  , &apos;Bot&apos;)  &amp;&amp;  ISPICKVAL(Status , &apos;Waiting&apos;)  , NOW(), EndTime  )</formula>
    <label>Agent accepted time</label>
    <type>DateTime</type>
</CustomField>