force-app/main/default/objects/MessagingSession/fields/Chat_request_SLA_calculation__c.field-meta.xml
<CustomField>
    <fullName>Chat_request_SLA_calculation__c</fullName>
    <formula>IF(NOW() - MS_accepted_time_by_agent__c &gt;= (2/1440), TRUE, FALSE)</formula>
    <label>Chat request SLA calculation</label>
    <type>Checkbox</type>
</CustomField>