force-app/main/default/objects/MessagingSession/fields/Chat_wait_time__c.field-meta.xml
<CustomField>
    <fullName>Chat_wait_time__c</fullName>
    <formula>IF( ISBLANK( AcceptTime) , NULL, CEILING((AcceptTime- CreatedDate )*1440))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chat wait time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>