force-app/main/default/objects/MessagingSession/fields/MS_accepted_time_by_agent__c.field-meta.xml
<CustomField>
    <fullName>MS_accepted_time_by_agent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MS accepted  time by agent</label>
    <type>DateTime</type>
</CustomField>