force-app/main/default/objects/MessagingSession/recordTypes/Freight_MIAW.recordType-meta.xml
<RecordType>
    <fullName>Freight_MIAW</fullName>
    <active>true</active>
    <label>Freight MIAW</label>
</RecordType>