force-app/main/default/objects/MessagingSession/recordTypes/QAC_NDC_MIAW.recordType-meta.xml
<RecordType>
    <fullName>QAC_NDC_MIAW</fullName>
    <active>true</active>
    <description>Recordtype for QAC NDC chat</description>
    <label>QAC-NDC MIAW</label>
</RecordType>