force-app/main/default/objects/MessagingSession/listViews/Messaging_for_In_App_and_Web_Queue_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Messaging_for_In_App_and_Web_Queue_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Messaging for In App and Web Queue</label>
    <queue>Messaging_for_In_App_and_Web_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>