force-app/main/default/objects/MessagingSession/listViews/QAC_Queue_active_waiting.listView-meta.xml
<ListView>
    <fullName>QAC_Queue_active_waiting</fullName>
    <columns>Name</columns>
    <columns>Case</columns>
    <columns>Contact__c</columns>
    <columns>MessagingEndUser</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessagingChannel</field>
        <operation>contains</operation>
        <value>QAC</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>0,2</value>
    </filters>
    <label>QAC Queue Active and waiting</label>
</ListView>