force-app/main/default/objects/MessagingSession/listViews/QAC_Queue_MessagingSession.listView-meta.xml
<ListView>
    <fullName>QAC_Queue_MessagingSession</fullName>
    <columns>Name</columns>
    <columns>Case</columns>
    <columns>Contact__c</columns>
    <columns>MessagingEndUser</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedDate</field>
        <operation>greaterThan</operation>
        <value>11/18/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>MessagingChannel</field>
        <operation>contains</operation>
        <value>QAC</value>
    </filters>
    <label>QAC Queue</label>
    <sharedTo>
        <group>QAC_live_chat_group</group>
    </sharedTo>
</ListView>